# QTMChess

./: .gitignore  CBoard.cpp  CBoard.h  CMakeLists.txt  CMakeLists.txt.user.5f48ace  CMakeLists.txt.user.8f847f6  CMove.cpp  CMove.h  CMoveList.cpp  CMoveList.h  CSquare.h  QTMChess.pro  README.md  ai.cpp  ai.h  clang-format  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtboard.cpp  qtboard.h  qtcell.cpp  qtcell.h  qtscene.cpp  qtscene.h
.github/workflows/: my-ci.yaml
html/: CBoard_8h_source.html  CMoveList_8h_source.html  CMove_8h_source.html  CSquare_8h_source.html  ai_8h_source.html  annotated.html  classAI-members.html  classAI.html  classCBoard-members.html  classCBoard.html  classCMove-members.html  classCMove.html  classCMoveList-members.html  classCMoveList.html  classCSquare-members.html  classCSquare.html  classMainWindow-members.html  classMainWindow.html  classQTBoard-members.html  classQTBoard.html  classQTCell-members.html  classQTCell.html  classQTScene-members.html  classQTScene.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  mainwindow_8h_source.html  md_README.html  pages.html  qtboard_8h_source.html  qtcell_8h_source.html  qtscene_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
